// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Field Test: locationField 1`] = `
<div
  id="mapundefinedvalOfBool"
  style={
    Object {
      "minHeight": "200pt",
    }
  }
/>
`;

exports[`Text Field Test: set to invalid 1`] = `
<div
  id="mapundefinedvalOfBool"
  style={
    Object {
      "minHeight": "200pt",
    }
  }
/>
`;

exports[`Text Field Test: set to otherValidLocation 1`] = `
<div
  id="mapundefinedvalOfBool"
  style={
    Object {
      "minHeight": "200pt",
    }
  }
/>
`;

exports[`Text Field Test: set to validLocation 1`] = `
<div
  id="mapundefinedvalOfBool"
  style={
    Object {
      "minHeight": "200pt",
    }
  }
/>
`;

exports[`location helpers: after change 1`] = `
Array [
  22,
  53,
]
`;

exports[`location helpers: default return 1`] = `
Array [
  52.1513,
  4.4826,
]
`;

exports[`location helpers: not yet changed 1`] = `"unset"`;
